--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,18 @@
 body
 {
-    color: darkblue;
+    color: rgb(51, 40, 40);
     text-align: center;
     font-family: Arial;
+}
+#Contenedor
+{
+width: 70%;
+padding: 1em;
+text-align: left; 
+border: 2px solid rgb(138, 138, 138);
+margin: 0 auto
+}
+#Contenedor h1
+{
+    font-size: 20px;
 }
