--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,17 +1,26 @@
 body
 {
-    color: rgb(51, 40, 40);
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: arial;
+    font-size: 16px;
+    margin: o;
+    padding: 0;
 }
 #cabecera
 {
-    background: #33a;
+    background: #37488b;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+#cabecera #logo
+{
+    width: 25px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -33,5 +42,6 @@ margin: 0 auto
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
